# colors

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  setup.py
colors/: __init__.py  color.py  color_list.py  colors.xml  comparison.py  gradient.py  palette.py  palettes.xml  tools.py
