[project]
name = "colors"
version = "1.2.1"
description = "Custom Colors module"
authors = [
    { name = "Len Washington III" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11.9"
dependencies = []

[project.optional-dependencies]
comparison = ["numpy >= 2.1.2"]
all = ["numpy >= 2.1.2"]

[project.urls]
Source = "https://github.com/lwashington3/colors"
Issues = "https://github.com/lwashington3/colors/issues"

[project.scripts]
rlpy = "rlpy.__main__:main"

[build-system]
requires = ["setuptools>=61.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["colors"]
include-package-data = true
